@@ -1,11 +1,13 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form string="View" col="2">
+<form string="View">
     <label name="act_window"/>
-    <field name="act_window"/>
+    <field name="act_window" colspan="3"/>
     <label name="sequence"/>
     <field name="sequence"/>
+    <label name="active"/>
+    <field name="active"/>
     <label name="view"/>
     <field name="view"/>
 </form>
